  * Don't pass -mfloat-abi=softfp when building webrtc on armhf
    - add debian/patches/webrtc-fix-compiler-flags-for-armhf.patch
    - update debian/patches/series
  * Backport some skia fixes to fix a build failure on aarch64 against
    kernel headers that don't define HWCAP_CRC32
    - add debian/patches/skia-fix-aarch64-build-on-older-linux.patch
    - update debian/patches/series

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Fri, 22 Sep 2017 13:20:26 +0200

firefox-trunk (57.0~a1~hg20170920r381849-0ubuntu1) artful; urgency=medium

  [ Rico Tzschichholz ]
  * Bump build-dep on rustc >= 1.19.0 and cargo >= 0.20
  * Don't checkout locales on buildtime
    - debian/patches/dont-checkout-locales.patch
  * Add ppc64/s390x build fixes
    - debian/patches/build-ppc64-s390x-nss.patch
  * Don't restrict Destop Actions to Unity (LP: #1615549)
    and make them compliant with GNOME-Shell
    - debian/firefox.desktop.in
  * Set REAL_LOCALE_MERGEDIR rather than LOCALE_MERGEDIR
    - debian/build/rules.mk
  * Build-dep on clang-4.0, llvm-4.0-dev on all archs for stylo
    - update debian/control{,.in}
  * Refresh patches
    - update debian/patches/ppc-no-static-sizes.patch

  [ Chris Coulson ]
  * Refactor nsNativeMenuService ownership and shutdown behaviour - the only
    reference to it now is held by the service manager, and the global instance
    pointer is no longer cleared during the xpcom-shutdown notification. This
    fixes a shutdown UAF that appeared in the current Firefox version, where
    nsWindow and the associated nsMenuBar can be destroyed after xpcom-shutdown,
    when it was too late to clean up properly.
    - update debian/patches/unity-menubar.patch
  * Update unity-menubar.patch to work with Stylo
  * Hopefully fix LP: #1711337 by building the armhf build with
    -fno-schedule-insns to work around a compiler bug

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Tue, 19 Sep 2017 10:46:02 +0200
